feat: start app inside docker

--- a/quickstart/Dockerfile
+++ b/quickstart/Dockerfile
@@ -4,10 +4,5 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci --no-progress
 COPY . ./
-RUN npm run build
 
-# Stage 2 - the production environment
-FROM nginx:1.17.5-alpine
-COPY --from=build-deps /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD [ "npm", "run", "start"]
