--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -63,5 +63,5 @@
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://server:8080"
 }
