--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/papaparse": "^5.0.1",
+    "papaparse": "^5.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "three": "^0.109.0"
